Web開発編修正中

--- a/Python/Streamlit/Streamlit_basic_3.ipynb
+++ b/Python/Streamlit/Streamlit_basic_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPnIQEFy5c4XYZdi83WLhop",
+      "authorship_tag": "ABX9TyNuyfobfii4UwNPiauS4+wL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,7 @@
       "cell_type": "markdown",
       "source": [
         "本資料作成において、参考にしたページは[こちら](https://data-analytics.fun/2022/08/28/streamlit-recap/#toc10)になります。\n",
+        "\n",
         "かなりこのサイト通りに進めています。"
       ],
       "metadata": {
@@ -230,11 +231,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "・**整数**を指定：引数で渡された数の分**等間隔**の列を作成する\n",
-        "　　　 　　　　`st.columns(2)`とすると、幅が同じ2列が作成される\n",
+        "- **整数**を指定：引数で渡された数の分**等間隔**の列を作成する\n",
+        "`st.columns(2)`とすると、幅が同じ2列が作成される\n",
         "\n",
-        "・**整数のリスト**を指定：要素の大きさに準する幅で、要素分の列を作成する\n",
-        "　　　　　　　　　　　`st.columns([3,7])`とすると、幅の比が3対7で分割される"
+        "- **整数のリスト**を指定：要素の大きさに準する幅で、要素分の列を作成する\n",
+        "`st.columns([3,7])`とすると、幅の比が3対7で分割される"
       ],
       "metadata": {
         "id": "f12cuVudb9aP"
@@ -569,10 +570,10 @@
       "source": [
         "`st.empty()` を使用すると、例えば以下のような場合に便利です。\n",
         "\n",
-        "・複数のウィジェットを一度に表示したい場合に、\n",
-        " 　ウィジェットを作成し、後で表示する値を設定することができる\n",
-        "・条件に基づいてウィジェットの表示を切り替えたい場合に、\n",
-        "　条件に応じてウィジェットを作成し、表示するかどうかを切り替えることができます。"
+        "- 複数のウィジェットを一度に表示したい場合に、\n",
+        " ウィジェットを作成し、後で表示する値を設定することができる\n",
+        "- 条件に基づいてウィジェットの表示を切り替えたい場合に、\n",
+        "条件に応じてウィジェットを作成し、表示するかどうかを切り替えることができます。"
       ],
       "metadata": {
         "id": "Ta5-fthc3wOw"
@@ -817,9 +818,9 @@
       "source": [
         "`st.form()` 内にフォームの要素を配置するメリットは以下の通りです。\n",
         "\n",
-        "・submitボタンが押されるまでの入力内容の保持できる\n",
-        "・必須項目のバリデーション、入力内容の確認画面の生成などを実装できる\n",
-        "・フォームの要素を独自のスタイルでレイアウトすることができる"
+        "- submitボタンが押されるまでの入力内容の保持できる\n",
+        "- 必須項目のバリデーション、入力内容の確認画面の生成などを実装できる\n",
+        "- フォームの要素を独自のスタイルでレイアウトすることができる"
       ],
       "metadata": {
         "id": "Z0-6UBXEDO1n"
