--- a/Python/LINEBot/LINEBot_Advanced.ipynb
+++ b/Python/LINEBot/LINEBot_Advanced.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNS2eksJ91fHY7uUiGTqQCj",
+      "authorship_tag": "ABX9TyOgLJ4PZ8t+j+9wroydKH5d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,9 @@
         "\"Your Channel Access Token\"と\"Your Channel Secret\"の部分に置き換えてください。\n",
         "\n",
         "  - WebHookURL を、 `Public URL: https://xx-xx-xx-xx-xx..ngrok.io`となっているところをふまえて\n",
-        "`https://xx-xx-xx-xx-xx..ngrok.io/callback` に変更してください。\n"
+        "`https://xx-xx-xx-xx-xx..ngrok.io/callback` に変更してください。\n",
+        "\n",
+        "![](https://imgur.com/x7YJM8b.png)"
       ],
       "metadata": {
         "id": "0CAic8B_7DTT"
