--- a/Python/LINEBot/LINEBot_Basic.ipynb
+++ b/Python/LINEBot/LINEBot_Basic.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO2kdHqkZ9aFcl/OeVH3RNv",
+      "authorship_tag": "ABX9TyOdgT7Z/CKK13xfvHC0k+Zj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +99,7 @@
       "metadata": {
         "id": "CTBvBGgx5vnI"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,8 +147,10 @@
         "from pyngrok import ngrok\n",
         "\n",
         "app = Flask(__name__)\n",
-        "line_bot_api = LineBotApi('Your Channel Access Token')  # LineBotApiオブジェクトを作成し、Channel Access Tokenを指定\n",
-        "handler = WebhookHandler('Your Channel Secret')  # WebhookHandlerオブジェクトを作成し、Channel Secretを指定\n",
+        "# LineBotApiオブジェクトを作成\n",
+        "dotenv.load_dotenv(\"./info/.env\")\n",
+        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
+        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
