--- a/Python/LINEBot/LINEBot_Basic.ipynb
+++ b/Python/LINEBot/LINEBot_Basic.ipynb
@@ -145,6 +145,7 @@
         "from linebot.exceptions import InvalidSignatureError\n",
         "from linebot.models import MessageEvent, TextMessage, TextSendMessage, ImageMessage, ImageSendMessage\n",
         "from pyngrok import ngrok\n",
+        "import dotenv\n",
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
