--- a/Python/LINEBot/LINEBot_Basic.ipynb
+++ b/Python/LINEBot/LINEBot_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdgT7Z/CKK13xfvHC0k+Zj",
+      "authorship_tag": "ABX9TyPXsG/pYwJ+4baLhYLOxqTd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,12 +61,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "※分かりにくいところは[こちらのサイト](https://junpage.com/line-bot-development/#index_id0)（個人的にオススメ）など、参考になる記事がたくさんあります！"
+      ],
+      "metadata": {
+        "id": "xVaMze64dFQl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "- [LINE Developersコンソール](https://developers.line.biz/console/)にアクセスし、チャネルを作成してください。\n",
         "手順については[LINE Developersコンソールでチャネルを作成する](https://developers.line.me/ja/docs/messaging-api/getting-started/)を参考にしてください。\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
         "  - チャネルの「チャネル基本設定」で、\n",
         "チャネルアクセストークンとチャネルシークレットを取得してください。\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "  - 取得したチャネルアクセストークンとチャネルシークレットを、\n",
@@ -99,7 +112,7 @@
       "metadata": {
         "id": "CTBvBGgx5vnI"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -150,8 +163,8 @@
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
         "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
