--- a/Python/LINEBot/LINEBot_Basic.ipynb
+++ b/Python/LINEBot/LINEBot_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXsG/pYwJ+4baLhYLOxqTd",
+      "authorship_tag": "ABX9TyMvOI9oszizcyvDdq4p1RtZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
         "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
         "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
@@ -248,9 +248,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
@@ -379,9 +379,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "# カウント用のグローバル変数\n",
         "count = 0\n",
@@ -467,9 +467,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "# カウント用のグローバル変数\n",
         "count = \"スタート\"\n",
@@ -552,9 +552,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "# カウント用のグローバル変数\n",
         "session = {}  # 電卓セッションの情報を保持する辞書\n",
