--- a/Python/LINEBot/LINEBot_Advanced.ipynb
+++ b/Python/LINEBot/LINEBot_Advanced.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgLJ4PZ8t+j+9wroydKH5d",
+      "authorship_tag": "ABX9TyOrNvfSmiGXLl+f516yzFfT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,15 @@
       ],
       "metadata": {
         "id": "31m9pF-m7B5V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "※分かりにくいところは[こちらのサイト](https://junpage.com/line-bot-development/#index_id0)（個人的にオススメ）など、参考になる記事がたくさんあります！"
+      ],
+      "metadata": {
+        "id": "VYcraCoxeALs"
       }
     },
     {
@@ -168,13 +177,13 @@
       "source": [
         "# .envファイルを上書きしてAPIキーを追加する\n",
         "\n",
-        "with open(\"./info/.env\", \"a\") as f:\n",
+        "with open(\"content/info/.env\", \"a\") as f:\n",
         "    f.write(\"\\nAPI_KEY=YOUR_API_KEY\\n\")"
       ],
       "metadata": {
         "id": "Ey00lsz9H_OD"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -195,9 +204,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "api_key = os.getenv(\"API_KEY\")\n",
         "\n",
         "# カウント用のグローバル変数\n",
@@ -406,9 +415,10 @@
         "import dotenv\n",
         "\n",
         "app = Flask(__name__)\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "# LineBotApiオブジェクトを作成\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "# カウント用のグローバル変数\n",
         "session = {}  # 電卓セッションの情報を保持する辞書\n",
@@ -681,9 +691,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
@@ -852,9 +862,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
@@ -963,7 +973,151 @@
     {
       "cell_type": "markdown",
       "source": [
-        "以下では、YAHOO!社の主要サイトをリッチメニューで表示し、\n",
+        "### 画像の作り方"
+      ],
+      "metadata": {
+        "id": "wsrsg68Pqi3y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "リッチメニューに使う画像の作り方（結合方法）について紹介しています。\n",
+        "\n",
+        "参考記事は[こちら](https://note.nkmk.me/python-opencv-hconcat-vconcat-np-tile/)です。"
+      ],
+      "metadata": {
+        "id": "qOUFgB3Lqray"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[公式ドキュメント](https://developers.line.biz/ja/docs/messaging-api/using-rich-menus/#prepare-a-rich-menu-image)にもありますが、使える画像には制限がありますので注意して下さい。"
+      ],
+      "metadata": {
+        "id": "WT8sga7Xr0Cz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### imgurにアップロードした画像の結合"
+      ],
+      "metadata": {
+        "id": "3MjWfc7Fq8TD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "import urllib.request\n",
+        "\n",
+        "# 画像のURLリスト\n",
+        "url_list = [\n",
+        "    'https://imgur.com/YcgCkBn.png',\n",
+        "    'https://imgur.com/FuNYAGX.png',\n",
+        "    'https://imgur.com/YWWMTXq.png',\n",
+        "    'https://imgur.com/8AqHobb.png'\n",
+        "]\n",
+        "image_list = list()\n",
+        "for idx, image_url in enumerate(url_list):\n",
+        "\n",
+        "    # 画像をダウンロードして保存する\n",
+        "    urllib.request.urlretrieve(image_url, f'image({idx}).png')\n",
+        "\n",
+        "    image_path = cv2.imread(f\"/content/image({idx}).png\")\n",
+        "    image_s = cv2.resize(image_path, dsize=(0, 0), fx=0.5, fy=0.5)\n",
+        "    image_list.append(image_s)\n",
+        "\n",
+        "def concat_tile(im_list_2d):\n",
+        "    return cv2.vconcat([cv2.hconcat(im_list_h) for im_list_h in im_list_2d])\n",
+        "\n",
+        "im_tile = concat_tile([[image_list[0], image_list[1]],\n",
+        "                       [image_list[2], image_list[3]]])\n",
+        "cv2.imwrite('/content/richtie.png', im_tile)\n",
+        "\n",
+        "# 画像の読み込み\n",
+        "image = cv2.imread('/content/richtie.png')\n",
+        "\n",
+        "# 画像のリサイズ\n",
+        "resized_image = cv2.resize(image, (800, 540))\n",
+        "\n",
+        "# リサイズ後の画像の保存\n",
+        "cv2.imwrite('/content/resized_richtile.png', resized_image)"
+      ],
+      "metadata": {
+        "id": "uLgM8kt5BG4T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Colabにアップロードした画像の結合"
+      ],
+      "metadata": {
+        "id": "CrIQGKdcrDqh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "# 画像のURLリスト\n",
+        "png_list = [\n",
+        "    '/content/image(0).png',\n",
+        "    '/content/image(1).png',\n",
+        "    '/content/image(2).png',\n",
+        "    '/content/image(3).png'\n",
+        "]\n",
+        "image_list = list()\n",
+        "\n",
+        "for idx, image_path in enumerate(png_list):\n",
+        "    image_path = cv2.imread(f\"/content/image({idx}).png\")\n",
+        "    image_s = cv2.resize(image_path, dsize=(0, 0), fx=0.5, fy=0.5)\n",
+        "    image_list.append(image_s)\n",
+        "\n",
+        "def concat_tile(im_list_2d):\n",
+        "    return cv2.vconcat([cv2.hconcat(im_list_h) for im_list_h in im_list_2d])\n",
+        "\n",
+        "im_tile = concat_tile([[image_list[0], image_list[1]],\n",
+        "                       [image_list[2], image_list[3]]])\n",
+        "cv2.imwrite('/content/richtie2.png', im_tile)\n",
+        "\n",
+        "# 画像の読み込み\n",
+        "image = cv2.imread('/content/richtie.png')\n",
+        "\n",
+        "# 画像のリサイズ\n",
+        "resized_image = cv2.resize(image, (800, 540))\n",
+        "\n",
+        "# リサイズ後の画像の保存\n",
+        "cv2.imwrite('/content/resized_richtile.png', resized_image)"
+      ],
+      "metadata": {
+        "id": "CYeQkaNKrVvW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 実行"
+      ],
+      "metadata": {
+        "id": "OtTRewFofBtS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "以下では、Yahoo!社の主要サイトをリッチメニューで表示し、\n",
         "それぞれのサイトに飛べるようにしています。"
       ],
       "metadata": {
@@ -1000,9 +1154,9 @@
         "\n",
         "app = Flask(__name__)\n",
         "# LineBotApiオブジェクトを作成\n",
-        "dotenv.load_dotenv(\"./info/.env\")\n",
-        "line_bot_api = LineBotApi(os.environ[\"CHANNEL_ACCESS_TOKEN\"])\n",
-        "handler = WebhookHandler(os.environ[\"CHANNEL_SECRET\"])\n",
+        "dotenv.load_dotenv(\"content/info/.env\")\n",
+        "line_bot_api = LineBotApi(os.getenv('CHANNEL_ACCESS_TOKEN'))\n",
+        "handler = WebhookHandler(os.getenv('CHANNEL_SECRET'))\n",
         "\n",
         "@app.route(\"/callback\", methods=['POST'])\n",
         "def callback():\n",
@@ -1064,7 +1218,7 @@
         ")\n",
         "\n",
         "# 1つ目のエリアの画像を設定\n",
-        "with open(\"/content/merged.png\", 'rb') as f:\n",
+        "with open(\"/content/resized_richtile.png\", 'rb') as f:\n",
         "    rich_menu_area1_image = f.read()\n",
         "\n",
         "\n",
@@ -1087,141 +1241,6 @@
       ],
       "metadata": {
         "id": "MrVVYJ6eET-I"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 画像の作り方"
-      ],
-      "metadata": {
-        "id": "wsrsg68Pqi3y"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "リッチメニューに使う画像の作り方（結合方法）について紹介しています。\n",
-        "\n",
-        "参考記事は[こちら](https://note.nkmk.me/python-opencv-hconcat-vconcat-np-tile/)です。"
-      ],
-      "metadata": {
-        "id": "qOUFgB3Lqray"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[公式ドキュメント](https://developers.line.biz/ja/docs/messaging-api/using-rich-menus/#prepare-a-rich-menu-image)にもありますが、使える画像には制限がありますので注意して下さい。"
-      ],
-      "metadata": {
-        "id": "WT8sga7Xr0Cz"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Colabにアップロードした画像の結合"
-      ],
-      "metadata": {
-        "id": "CrIQGKdcrDqh"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "\n",
-        "# 画像のURLリスト\n",
-        "png_list = [\n",
-        "    '/content/image(0).png',\n",
-        "    '/content/image(1).png',\n",
-        "    '/content/image(2).png',\n",
-        "    '/content/image(3).png'\n",
-        "]\n",
-        "image_list = list()\n",
-        "\n",
-        "for idx, image_path in enumerate(png_list):\n",
-        "    image_path = cv2.imread(f\"/content/image({idx}).png\")\n",
-        "    image_s = cv2.resize(image_path, dsize=(0, 0), fx=0.5, fy=0.5)\n",
-        "    image_list.append(image_s)\n",
-        "\n",
-        "def concat_tile(im_list_2d):\n",
-        "    return cv2.vconcat([cv2.hconcat(im_list_h) for im_list_h in im_list_2d])\n",
-        "\n",
-        "im_tile = concat_tile([[image_list[0], image_list[1]],\n",
-        "                       [image_list[2], image_list[3]]])\n",
-        "cv2.imwrite('/content/richtie2.png', im_tile)\n",
-        "\n",
-        "# 画像の読み込み\n",
-        "image = cv2.imread('/content/richtie.png')\n",
-        "\n",
-        "# 画像のリサイズ\n",
-        "resized_image = cv2.resize(image, (800, 540))\n",
-        "\n",
-        "# リサイズ後の画像の保存\n",
-        "cv2.imwrite('/content/resized_richtile.png', resized_image)"
-      ],
-      "metadata": {
-        "id": "CYeQkaNKrVvW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### imgurにアップロードした画像の結合"
-      ],
-      "metadata": {
-        "id": "3MjWfc7Fq8TD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "import urllib.request\n",
-        "\n",
-        "# 画像のURLリスト\n",
-        "url_list = [\n",
-        "    'https://imgur.com/YcgCkBn.png',\n",
-        "    'https://imgur.com/FuNYAGX.png',\n",
-        "    'https://imgur.com/YWWMTXq.png',\n",
-        "    'https://imgur.com/8AqHobb.png'\n",
-        "]\n",
-        "image_list = list()\n",
-        "for idx, image_url in enumerate(url_list):\n",
-        "\n",
-        "    # 画像をダウンロードして保存する\n",
-        "    urllib.request.urlretrieve(image_url, f'image({idx}).png')\n",
-        "\n",
-        "    image_path = cv2.imread(f\"/content/image({idx}).png\")\n",
-        "    image_s = cv2.resize(image_path, dsize=(0, 0), fx=0.5, fy=0.5)\n",
-        "    image_list.append(image_s)\n",
-        "\n",
-        "def concat_tile(im_list_2d):\n",
-        "    return cv2.vconcat([cv2.hconcat(im_list_h) for im_list_h in im_list_2d])\n",
-        "\n",
-        "im_tile = concat_tile([[image_list[0], image_list[1]],\n",
-        "                       [image_list[2], image_list[3]]])\n",
-        "cv2.imwrite('/content/richtie.png', im_tile)\n",
-        "\n",
-        "# 画像の読み込み\n",
-        "image = cv2.imread('/content/richtie.png')\n",
-        "\n",
-        "# 画像のリサイズ\n",
-        "resized_image = cv2.resize(image, (800, 540))\n",
-        "\n",
-        "# リサイズ後の画像の保存\n",
-        "cv2.imwrite('/content/resized_richtile.png', resized_image)"
-      ],
-      "metadata": {
-        "id": "uLgM8kt5BG4T"
       },
       "execution_count": null,
       "outputs": []
