--- a/Python/Python_Basic/question/PythonBasic24_4_Question.ipynb
+++ b/Python/Python_Basic/question/PythonBasic24_4_Question.ipynb
@@ -160,7 +160,7 @@
         " ・ run()メソッドではfuelを5消費して、走ったことが分かる文言を表示させる  \n",
         "     \t  　（例:  \"燃料を5消費して走りました。\"）    \n",
         "\n",
-        " ・ fuelが0以下の時走れなかったことが分かる文言を表示させる  \n",
+        " ・ fuelが5未満の時走れなかったことが分かる文言を表示させる  \n",
         "        \n",
         "\n",
         "\n"
