--- a/Python/Python_Machine/Machine_Learning_5_1.ipynb
+++ b/Python/Python_Machine/Machine_Learning_5_1.ipynb
@@ -98,7 +98,7 @@
       "source": [
         "機械学習の基本は「損失」を最小にするようにモデルのパラメータを学習することです。\n",
         "\n",
-        "ここでは、損失関数をMSE（参考：[こちら](https://datawokagaku.com/cost_function/#:~:text=%E3%81%A7%E3%81%99%EF%BC%8E%E3%81%93%E3%82%8C%E3%82%92-,MSE,-(mean%20squared%20error ）として説明します。"
+        "ここでは、損失関数をMSE（参考：[こちら](https://shorturl.at/iuFJ5 ）として説明します。"
       ],
       "metadata": {
         "id": "YUidfHBZFbd6"
