--- a/Python/Python_Machine/Machine_Learning_5_1.ipynb
+++ b/Python/Python_Machine/Machine_Learning_5_1.ipynb
@@ -98,7 +98,7 @@
       "source": [
         "機械学習の基本は「損失」を最小にするようにモデルのパラメータを学習することです。\n",
         "\n",
-        "ここでは、損失関数をMSE（参考：[こちら](https://shorturl.at/iuFJ5 ）として説明します。"
+        "ここでは、損失関数をMSE（参考：[こちら](https://shorturl.at/iuFJ5 )として説明します。"
       ],
       "metadata": {
         "id": "YUidfHBZFbd6"
